--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "build": "rimraf ./dist && tsc",
     "start:dev": "nodemon",
-    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test": "jest --passWithNoTests --runInBand --no-cache --verbose",
     "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@shelf/jest-mongodb": "^2.1.1",
     "@types/luxon": "^2.0.7",
     "axios": "^0.24.0",
     "bottlejs": "^2.0.0",
@@ -19,10 +20,12 @@
     "fastify-swagger": "^4.12.6",
     "luxon": "^2.1.1",
     "mongodb": "^4.2.1",
+    "mongodb-memory-server": "^8.0.4",
     "nodemon": "^2.0.15",
     "pino": "^7.5.1",
     "pino-pretty": "^7.2.0",
     "ts-jest": "^27.0.7",
+    "ts-mockito": "^2.6.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "uuid": "^8.3.2"
